bug fix judul overflow

--- a/src/biro3ukdw/public/style/css/app.css
+++ b/src/biro3ukdw/public/style/css/app.css
@@ -81,6 +81,7 @@
 
 *{
 	word-wrap: break-word;
+	word-break: break-word;
 }
 
 #footer{
